modified some files

--- a/css/sass/pages/_homepages.scss
+++ b/css/sass/pages/_homepages.scss
@@ -101,7 +101,9 @@
     @media #{$maxMobile} {
       margin-bottom: 40px;
     }
-   
+    .player-img{
+      max-width: 100%;
+    }
     .player-title{
       color:#666;
       font-weight: normal;
